--- a/DungeonCrawler/DungeonCrawler.vcxproj
+++ b/DungeonCrawler/DungeonCrawler.vcxproj
@@ -154,8 +154,8 @@
     <ClInclude Include="include\imgui\imstb_rectpack.h" />
     <ClInclude Include="include\imgui\imstb_textedit.h" />
     <ClInclude Include="include\imgui\imstb_truetype.h" />
-    <ClInclude Include="include\Root\Camera.h" />
     <ClInclude Include="include\Root\Logger.h" />
+    <ClInclude Include="include\Root\rendering\Renderer.h" />
     <ClInclude Include="include\Root\Root.h" />
     <ClInclude Include="include\Root\shaders\AbstractShader.h" />
     <ClInclude Include="include\Root\shaders\ComputeShader.h" />
@@ -174,6 +174,7 @@
     <ClInclude Include="src\ScriptLoader.h" />
     <ClInclude Include="src\scripts\MyComponentScript.h" />
     <ClInclude Include="src\scripts\MyScript.h" />
+    <ClInclude Include="include\stbi_utility\TextureData.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\Root\Component.cpp" />
@@ -185,8 +186,8 @@
     <ClCompile Include="include\imgui\imgui_stdlib.cpp" />
     <ClCompile Include="include\imgui\imgui_tables.cpp" />
     <ClCompile Include="include\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="include\Root\Camera.cpp" />
     <ClCompile Include="include\Root\Logger.cpp" />
+    <ClCompile Include="include\Root\rendering\Renderer.cpp" />
     <ClCompile Include="include\Root\rendering\SpriteRenderer.cpp" />
     <ClCompile Include="include\Root\Root.cpp" />
     <ClCompile Include="include\Root\shaders\AbstractShader.cpp" />
@@ -206,6 +207,7 @@
     <ClCompile Include="src\ScriptLoader.cpp" />
     <ClCompile Include="src\scripts\MyComponentScript.cpp" />
     <ClCompile Include="src\scripts\MyScript.cpp" />
+    <ClCompile Include="include\stbi_utility\TextureData.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
