--- a/DungeonCrawler/DungeonCrawler.vcxproj
+++ b/DungeonCrawler/DungeonCrawler.vcxproj
@@ -172,7 +172,7 @@
     <ClInclude Include="include\Root\Script.h" />
     <ClInclude Include="include\Root\Transform.h" />
     <ClInclude Include="include\Root\Time.h" />
-    <ClInclude Include="RootEngine.h" />
+    <ClInclude Include="include\Root\engine\RootEngine.h" />
     <ClInclude Include="src\ScriptLoader.h" />
     <ClInclude Include="src\scripts\MyComponentScript.h" />
     <ClInclude Include="src\scripts\MyScript.h" />
@@ -204,7 +204,7 @@
     <ClCompile Include="include\simpleprofiler\Profiler.cpp" />
     <ClCompile Include="include\simpletext\SimpleText.cpp" />
     <ClCompile Include="include\Root\Script.cpp" />
-    <ClCompile Include="RootEngine.cpp" />
+    <ClCompile Include="include\Root\engine\RootEngine.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="include\Root\Transform.cpp" />
