--- a/DungeonCrawler/DungeonCrawler.vcxproj
+++ b/DungeonCrawler/DungeonCrawler.vcxproj
@@ -118,7 +118,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>freetype.lib;glfw3.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>box2d.lib;freetype.lib;glfw3.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -137,10 +137,50 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>freetype.lib;glfw3.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>box2d.lib;freetype.lib;glfw3.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\box2d\b2_api.h" />
+    <ClInclude Include="include\box2d\b2_block_allocator.h" />
+    <ClInclude Include="include\box2d\b2_body.h" />
+    <ClInclude Include="include\box2d\b2_broad_phase.h" />
+    <ClInclude Include="include\box2d\b2_chain_shape.h" />
+    <ClInclude Include="include\box2d\b2_circle_shape.h" />
+    <ClInclude Include="include\box2d\b2_collision.h" />
+    <ClInclude Include="include\box2d\b2_common.h" />
+    <ClInclude Include="include\box2d\b2_contact.h" />
+    <ClInclude Include="include\box2d\b2_contact_manager.h" />
+    <ClInclude Include="include\box2d\b2_distance.h" />
+    <ClInclude Include="include\box2d\b2_distance_joint.h" />
+    <ClInclude Include="include\box2d\b2_draw.h" />
+    <ClInclude Include="include\box2d\b2_dynamic_tree.h" />
+    <ClInclude Include="include\box2d\b2_edge_shape.h" />
+    <ClInclude Include="include\box2d\b2_fixture.h" />
+    <ClInclude Include="include\box2d\b2_friction_joint.h" />
+    <ClInclude Include="include\box2d\b2_gear_joint.h" />
+    <ClInclude Include="include\box2d\b2_growable_stack.h" />
+    <ClInclude Include="include\box2d\b2_joint.h" />
+    <ClInclude Include="include\box2d\b2_math.h" />
+    <ClInclude Include="include\box2d\b2_motor_joint.h" />
+    <ClInclude Include="include\box2d\b2_mouse_joint.h" />
+    <ClInclude Include="include\box2d\b2_polygon_shape.h" />
+    <ClInclude Include="include\box2d\b2_prismatic_joint.h" />
+    <ClInclude Include="include\box2d\b2_pulley_joint.h" />
+    <ClInclude Include="include\box2d\b2_revolute_joint.h" />
+    <ClInclude Include="include\box2d\b2_rope.h" />
+    <ClInclude Include="include\box2d\b2_settings.h" />
+    <ClInclude Include="include\box2d\b2_shape.h" />
+    <ClInclude Include="include\box2d\b2_stack_allocator.h" />
+    <ClInclude Include="include\box2d\b2_timer.h" />
+    <ClInclude Include="include\box2d\b2_time_of_impact.h" />
+    <ClInclude Include="include\box2d\b2_time_step.h" />
+    <ClInclude Include="include\box2d\b2_types.h" />
+    <ClInclude Include="include\box2d\b2_weld_joint.h" />
+    <ClInclude Include="include\box2d\b2_wheel_joint.h" />
+    <ClInclude Include="include\box2d\b2_world.h" />
+    <ClInclude Include="include\box2d\b2_world_callbacks.h" />
+    <ClInclude Include="include\box2d\box2d.h" />
     <ClInclude Include="include\Root\rendering\Camera.h" />
     <ClInclude Include="include\Root\Component.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
