Fix transform issues

--- a/DungeonCrawler/DungeonCrawler.vcxproj
+++ b/DungeonCrawler/DungeonCrawler.vcxproj
@@ -142,7 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\Root\Animator.h" />
-    <ClInclude Include="Collider.h" />
+    <ClInclude Include="include\Root\Collider.h" />
     <ClInclude Include="include\box2d\b2_api.h" />
     <ClInclude Include="include\box2d\b2_block_allocator.h" />
     <ClInclude Include="include\box2d\b2_body.h" />
@@ -219,7 +219,7 @@
     <ClInclude Include="include\Root\engine\InputEngine.h" />
     <ClInclude Include="include\Root\Physics.h" />
     <ClInclude Include="include\Root\engine\PhysicsEngine.h" />
-    <ClInclude Include="Rigidbody.h" />
+    <ClInclude Include="include\Root\Rigidbody.h" />
     <ClInclude Include="src\ScriptLoader.h" />
     <ClInclude Include="src\scripts\MyComponentScript.h" />
     <ClInclude Include="src\scripts\MyScript.h" />
@@ -227,7 +227,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\Root\Animator.cpp" />
-    <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="include\Root\Collider.cpp" />
     <ClCompile Include="include\Root\rendering\Camera.cpp" />
     <ClCompile Include="include\Root\Component.cpp" />
     <ClCompile Include="include\imgui\imgui.cpp" />
@@ -258,7 +258,7 @@
     <ClCompile Include="include\Root\engine\InputEngine.cpp" />
     <ClCompile Include="include\Root\Physics.cpp" />
     <ClCompile Include="include\Root\engine\PhysicsEngine.cpp" />
-    <ClCompile Include="Rigidbody.cpp" />
+    <ClCompile Include="include\Root\Rigidbody.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="include\Root\Transform.cpp" />
