Screen space shader effects

--- a/DungeonCrawler/DungeonCrawler.vcxproj
+++ b/DungeonCrawler/DungeonCrawler.vcxproj
@@ -225,6 +225,7 @@
     <ClInclude Include="include\Root\components\Rigidbody.h" />
     <ClInclude Include="include\Root\components\ParticleSystem.h" />
     <ClInclude Include="include\Root\Random.h" />
+    <ClInclude Include="include\Root\rendering\ScreenSpaceEffect.h" />
     <ClInclude Include="src\ScriptLoader.h" />
     <ClInclude Include="src\scripts\MyComponentScript.h" />
     <ClInclude Include="src\scripts\MyScript.h" />
@@ -269,6 +270,7 @@
     <ClCompile Include="include\Root\components\Rigidbody.cpp" />
     <ClCompile Include="include\Root\components\ParticleSystem.cpp" />
     <ClCompile Include="include\Root\Random.cpp" />
+    <ClCompile Include="include\Root\rendering\ScreenSpaceEffect.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="include\Root\Transform.cpp" />
